Fix for binary part handling bug in MHTMLParser

A multipart mime part is supposed to end with CRLF--BOUNDARY, and the
CRLF is supposed to be part of the boundary, not the content.
Previously, this code included the CRLF at the end of a binary part.
Now the CRLF is discarded.

Bug: 794354
Change-Id: I0fe76dd293b2a6059eda84014aed122010814a30